<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="host_name"></string>
    <string name="username"></string>
    <string name="password"></string>
    <string name="port">22</string>
    <string name="storage_path">BoilerMonitor</string>
    <string name="app_name">Oil Calculator</string>
    <string name="confirm_button">Confirm Selection</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="oil_burned">Oil burned</string>
    <string name="oil_burned_key">OIL BURNED</string>
    <string name="gallons">gallons</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="set_end_date">Set End Date</string>
</resources>