<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almost_black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/oilBurnedDisplay"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/oil_burned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/confirmationButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oilBurnedDisplay"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="150dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp" />


    <TextView
        android:id="@+id/startDateDisplay"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintEnd_toEndOf="@id/startDateSelectionButton"
        app:layout_constraintStart_toStartOf="@id/startDateSelectionButton"
        app:layout_constraintBottom_toTopOf="@id/startDateSelectionButton" />

    <TextView
        android:id="@+id/endDateDisplay"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        app:layout_constraintEnd_toEndOf="@id/endDateSelectionButton"
        app:layout_constraintStart_toStartOf="@id/endDateSelectionButton"
        app:layout_constraintBottom_toTopOf="@id/endDateSelectionButton" />

    <Button
        android:id="@+id/startDateSelectionButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_start_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp" />

    <Button
        android:id="@+id/endDateSelectionButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/set_end_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>